--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&display=swap');
+
 :root {
   --c-black-olive: hsla(93, 7%, 26%, 1);
   --c-linen: hsla(26, 100%, 94%, 1);
   --c-jade: hsla(135, 32%, 48%, 1);
   --c-hunter-green: hsla(132, 24%, 32%, 1);
-  --c-champagne-pink: hsla(26, 48%, 83%, 1);
+  --c-champagne-pink: #e8d1bf;
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -29,6 +32,20 @@ canvas {
   height: 100vh;
 }
 
+.back-image {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
+  filter: grayscale(1) contrast(0.25) brightness(1);
+  mix-blend-mode: multiply;
+  object-fit: cover;
+  object-position: center;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -47,39 +64,45 @@ body {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 7em;
   line-height: 1.1;
   font-weight: 400;
+  margin: 0;
+
+  & + p {
+    font-size: 2em;
+  }
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 1em 2em;
+  font-size: 1.25em;
   font-weight: 500;
+  letter-spacing: 1px;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
+  border: 1px solid var(--c-linen);
+  color: var(--c-linen);
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.25s;
+  outline: none;
+  font-weight: 600;
+  // text-shadow: 0 0 10px var(--c-black-olive);
+  box-shadow:  0 0 60px var(--c-black-olive);
+
 }
 button:hover {
-  border-color: #646cff;
+  background: var(--c-linen);
+  color: var(--c-black-olive);
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+  color: var(--c-black-olive);
+  background: var(--c-linen);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    color: var(--c-black-olive);
-    background: linear-gradient(45deg, var(--c-linen), var(--c-champagne-pink));
-  }
-  a:hover {
-    color: var(--c-jade);
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
