--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,8 @@
   // mix-blend-mode: plus-lighter;
 
   h1, p {
-    color: var(--c-linen);
-    text-shadow: 0 0 40px var(--c-black-olive);
+    color: var(--c-eerie-black);
+    // text-shadow: 0 0 40px var(--c-black-olive);
   }
 }
 
